feat: partially functional matching